@@ -1,4 +1,10 @@
 2001-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+	Patch by Jason Thomas <jason@topic.com.au>
+	     and Eric Siegerman <erics@telepres.com>
+
+	* common-src/bsd-security.c (check_user_amandahosts): improve message.
+
+2001-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/driver.c: Do not go in degraded mode in nodump mode.
 	* server-src/conffile.c:Check many options to be sure they are positive.
